Eliminar entrada Actualizado

--- a/practicaFinal_Entradas/frontend/src/app/views/entradaView/entradaView.component.html
+++ b/practicaFinal_Entradas/frontend/src/app/views/entradaView/entradaView.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="card-footer">
                 <button id="buyButton" class="btn btn-success" (click)="entrada.comprar(id)">Comprar</button>
-                <button id="deleteButton" class="btn btn-success" (click)="entrada.eliminar(id)">Eliminar</button>
+                <button id="deleteButton" class="btn btn-success" (click)="eliminar()">Eliminar</button>
                 <button id="modifyButton" class="btn btn-success" (click)="entrada.modificar(id)">Modificar</button>
             </div>
         </div>
